src/styles/global.css
:root {
  --font-display: "Shantell Sans Variable", serif;
  --font-body: "Fredoka Variable", sans-serif;

  /* Colors */
  --palette-white: #ffffff;
  --palette-cream-100: #f8f0e3;
  --palette-cream-300: #f4e8d4;
  --palette-sky-100: #e3ebf8;
  --palette-sky-500: #404181;
  --palette-sky-600: #002b8a;
  --palette-ink-500: #62606a;
  --palette-ink-700: #3e3e3e;
  --palette-ink-900: #111111;
  --palette-red-100: #d98d72;
  --palette-red-500: #c1513e;
  --palette-red-600: #d72e28;

  --space-xs: 0.4rem;
  --space-sm: 0.8rem;
  --space-md: 1.6rem;
  --space-lg: 2.4rem;
  --space-xl: 3.2rem;
  --space-xxl: 4.8rem;
  --space-xxxl: 6.4rem;

  --text-sm: clamp(1.2rem, 1.143rem + 0.179vw, 1.4rem);
  --text-base: clamp(1.4rem, 1.343rem + 0.179vw, 1.6rem);
  --text-lg: clamp(1.8rem, 1.63rem + 0.54vw, 2.4rem);
  --text-xl: clamp(2.4rem, 2.17rem + 0.71vw, 3.2rem);

  --bg-primary: var(--palette-cream-100);
  --bg-secondary: var(--palette-cream-300);

  --text-display: var(--palette-ink-900);
  --text-body: var(--palette-ink-500);
  --text-inverse: var(--palette-white);
  --text-hover: var(--palette-ink-700);
  --text-error: var(--palette-red-500);
}

body {
  font-family: var(--font-body);
  font-size: var(--text-base);
  color: var(--text-body);
  background-color: var(--bg-primary);
}

.container {
  width: 100%;
  max-width: 1400px;
  padding: 0 var(--space-lg);
  margin: 0 auto;
}

.btn {
  --_bg: var(--btn-bg, transparent);
  --_text: var(--btn-text, var(--text-display));
  --_border: var(--btn-border, transparent);

  --_hover-bg: var(--btn-hover-bg, transparent);
  --_hover-text: var(--btn-hover-text, var(--_text));
  --_hover-border: var(--btn-hover-border, var(--_border));

  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: var(--space-sm) var(--space-lg);
  font-weight: 600;
  color: var(--_text);
  letter-spacing: 1px;
  text-decoration: none;
  cursor: pointer;
  background-color: var(--_bg);
  border: 2px solid var(--_border);
  border-radius: 8px;
  transition: all 0.2s ease;
}

.btn:hover {
  color: var(--_hover-text);
  background-color: var(--_hover-bg);
  border-color: var(--_hover-border);
}

.btn--primary {
  --btn-bg: var(--palette-sky-500);
  --btn-text: var(--text-inverse);
  --btn-hover-bg: var(--palette-sky-600);
}

.btn--secondary {
  --btn-text: var(--palette-sky-500);
  --btn-border: var(--palette-sky-500);
  --btn-hover-bg: var(--palette-sky-500);
  --btn-hover-text: var(--text-inverse);
  --btn-hover-border: var(--palette-sky-500);
}

.btn--danger {
  --btn-bg: var(--palette-red-500);
  --btn-text: var(--text-inverse);
  --btn-hover-bg: var(--palette-red-600);
}

